objects/vlocity_ins__CachedPromotionTranslation__c.object
<CustomObject>
    <description>This object is to store translation of various field of Promotion.</description>
    <fields>
        <fullName>vlocity_ins__LocaleCode__c</fullName>
        <description>This field store locale code for the translation.</description>
        <label>Locale Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__VlocityLocaleCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionDescription__c</fullName>
        <description>This field store translated value of Description field of Promotion object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Translated Promotion Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field store promotion id.</description>
        <label>Translated Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Cached Promotion Translations</relationshipLabel>
        <relationshipName>CachedPromotionTranslations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionName__c</fullName>
        <description>This field store translated value of Name field of Promotion object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Translated Promotion Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Cached Promotion Translation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cached Promotion Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cached Promotion Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>